Bug fixed: image stretching

--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,8 @@ header h1 {
 	position: relative;
 	margin-top: 5em;
 	margin-left: 7em;
-	width: calc(100% - 7em);
-	min-height: calc(100% - 5em);
+	/*width: calc(100% - 7em);*/
+	height: calc(100% - 5em);
 }
 
 .section-left div {
@@ -141,8 +141,9 @@ header h1 {
 	position: relative;
 	margin-top: 5em;
 	margin-right: 7em;
-	width: calc(100% - 7em);
-	min-height: calc(100% - 5em);
+	float: right;
+	/*width: calc(100% - 7em);*/
+	height: calc(100% - 5em);
 }
 
 .section-right div {
